 o [COLLECTIONS-226] Added method "ListOrderedMap#putAll(int, Map)". Thanks to Vasily Ivanov. 
 o [COLLECTIONS-213] Added support for resettable iterators in "IteratorIterable". Thanks to Dusan Chromy. 


Changed classes / methods
-------------------------

 o [COLLECTIONS-466] Replaced "Collection" with "Iterable" for method arguments where applicable.
 o [COLLECTIONS-454] An iterator over a "Flat3Map#entrySet()" will now return independent Map.Entry objects that will
                     not change anymore when the iterator progresses.
 o [COLLECTIONS-453] Several closure and transformer implementations in the functor package will now copy
                     an array as input parameter to their constructor (e.g. ChainedClosure).
 o [COLLECTIONS-452] Change base package to "org.apache.commons.collections4".
 o [COLLECTIONS-451] The constructors for all *Utils classes are now private to prevent instantiation. 
 o [COLLECTIONS-424] "CompositeSet" does not inherit from "CompositeCollection" anymore. The inner class "SetMutator"
                     has been updated accordingly. Thanks to Michael Pradel.
 o [COLLECTIONS-382] Change maven coordinates to "org.apache.commons.commons-collections4". Thanks to Olivier Lamy. 
 o [COLLECTIONS-381] Move the project structure to a standard maven layout. Thanks to Olivier Lamy. 
 o [COLLECTIONS-372] TransformingComparator now supports different types for its input/output values. 
 o [COLLECTIONS-362] "CollectionUtils#filter(Iterable, Predicate)" will now return whether the collection has been modified.
                     Thanks to Jean-Noel Rouvignac. 
 o [COLLECTIONS-341] "NOPClosure" is now a final class. Thanks to Goran Hacek. 
 o [COLLECTIONS-324] Fields transformer and decorated in class "TransformingComparator" are now final. Thanks to sebb. 
 o [COLLECTIONS-307] "SetUniqueList#subList()" will now return an unmodifiable list as changes to it may invalidate the parent list.